fdo#74366# Determining bMail was accidentally inverted

...in 64b720dce8d3087ed62da815ecae1375b45149be "Related: fdo#38838 remove
UniString::SearchAscii"

Change-Id: I814d832dc88704670a04fdc7f3edd1296dfda991
(cherry picked from commit 196386efb6592c8ca43d40e27f7888d4809f500c)
Reviewed-on: https://gerrit.libreoffice.org/7820
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>